<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.grubmate.grubmate.SearchActivity">
    <EditText
        android:id="@+id/et_search_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/serach_item_name_hint"
        android:inputType="text"/>
    <TextView
        android:id="@+id/tv_search_advance_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_advance_search_hint"/>
    <LinearLayout
        android:id="@+id/ll_search_advance"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/search_spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/b_search_time"
            android:text="Time Period"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/cb_search_allergy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Filter Allergy"/>
    </LinearLayout>
    <Button
        android:id="@+id/b_search_button"
        android:text="@string/search_button_text"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/fragment_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

</LinearLayout>
