<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.grubmate.grubmate.PostActionActivity"
    tools:showIn="@layout/activity_post_action">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:showDividers="middle">

            <TextView
                android:id="@+id/tv_post_action_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/post_action_title"
                android:textAlignment="center"
                android:textSize="32sp" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_post_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_action_item_name_hint"
                android:inputType="text"
                android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_post_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Homemade" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_post_item_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_action_tags_hint"
                android:inputType="text"
                android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/b_post_action_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Add Photos"></Button>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_post_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_action_description_hint"
                android:lines="3"
                android:maxLength="140"
                android:maxLines="3" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_post_item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_action_quantity_hint"
                android:inputType="number"
                android:lines="3" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/b_post_time_period"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time Period"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Allergies"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/cb_post_allergy_one"
                    android:text="Milk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <CheckBox
                    android:id="@+id/cb_post_allergy_two"
                    android:text="Egg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <CheckBox
                    android:id="@+id/cb_post_allergy_three"
                    android:text="Fish"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <Spinner
                android:id="@+id/spinner_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

            <Button
                android:id="@+id/et_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Location" />

            <TextView
                android:id="@+id/et_location_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
